; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_extent-tree.c_add_excluded_extent.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_extent-tree.c_add_excluded_extent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_root = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }

@EXTENT_UPTODATE = common dso_local global i32 0, align 4
@GFP_NOFS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.btrfs_root*, i64, i64)* @add_excluded_extent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @add_excluded_extent(%struct.btrfs_root* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.btrfs_root*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.btrfs_root* %0, %struct.btrfs_root** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* %6, align 8
  %10 = add nsw i64 %8, %9
  %11 = sub nsw i64 %10, 1
  store i64 %11, i64* %7, align 8
  %12 = load %struct.btrfs_root*, %struct.btrfs_root** %4, align 8
  %13 = getelementptr inbounds %struct.btrfs_root, %struct.btrfs_root* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 0
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* %7, align 8
  %20 = load i32, i32* @EXTENT_UPTODATE, align 4
  %21 = load i32, i32* @GFP_NOFS, align 4
  %22 = call i32 @set_extent_bits(i32* %17, i64 %18, i64 %19, i32 %20, i32 %21)
  %23 = load %struct.btrfs_root*, %struct.btrfs_root** %4, align 8
  %24 = getelementptr inbounds %struct.btrfs_root, %struct.btrfs_root* %23, i32 0, i32 0
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32*, i32** %26, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 1
  %29 = load i64, i64* %5, align 8
  %30 = load i64, i64* %7, align 8
  %31 = load i32, i32* @EXTENT_UPTODATE, align 4
  %32 = load i32, i32* @GFP_NOFS, align 4
  %33 = call i32 @set_extent_bits(i32* %28, i64 %29, i64 %30, i32 %31, i32 %32)
  ret i32 0
}

declare dso_local i32 @set_extent_bits(i32*, i64, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
